# xa_stats

./: aclocal.m4  configure  configure.ac
src/C/: Makefile.am  files.c  files.h  fit.c  function.c  function.h  glm.c  ks.c  matrix.c  matrix.h  methods.c  metrics.c  nna.c  pca.c  solution.c  solution.h  stats.c  stats.h  svd.c  ttest.c  ttest_impl.c  ttest_impl.h  utils.c  utils.h  var_metrics.c  xa_stats_version.h
